# PPP-proj

./: .gitignore  README.md
ppp_proj_1/: run_scorep_profile_out.csv
ppp_proj_1/backup/: parallel_heat_solver.cpp
ppp_proj_1/csv_files/: run_scorep_profile_err.txt  run_scorep_profile_out.csv
ppp_proj_1/csv_files/new/: run_full_hybrid_1d_out.csv
ppp_proj_1/csv_files/with_one_paralel_file/: run_full_hybrid_1d_out.csv  run_full_hybrid_2d_err.txt
ppp_proj_1/csv_files/with_one_paralel_file/old/: run_full_hybrid_2d_out.csv
ppp_proj_1/csv_files/with_separate_paralel_file/: run_full_mpi_2d_out.csv
ppp_proj_1/csv_final/: run_full_hybrid_1d_out.csv  run_full_hybrid_2d_out.csv  run_full_mpi_2d_out.csv
ppp_proj_1/csv_simd/: generate_plots.py  run_full_hybrid_1d_out.csv  run_full_hybrid_2d_out.csv  run_full_mpi_2d_out.csv  weak_scaling.py
ppp_proj_1/csv_test/: run_full_hybrid_1d_out.csv  run_full_hybrid_2d_out.csv  run_full_mpi_2d_out.csv
ppp_proj_1/scripts/: generate_data.sh  generate_plots.py  input_data_256.h5  input_data_512.h5  outh  ppp_scorep_filter.flt  print_group.py  run_full_hybrid_1d.pbs  run_full_hybrid_2d.pbs  run_full_hybrid_2d_out.csv  run_full_mpi_2d.pbs  run_full_mpi_2d_out.csv  run_scorep_profile.pbs
ppp_proj_1/sources/: CMakeLists.txt  base.h  base_heat_solver.cpp  base_heat_solver.h  data_generator.cpp  main.cpp  material_properties.cpp  material_properties.h  parallel_heat_solver.cpp  parallel_heat_solver.h  sequential_heat_solver.cpp  sequential_heat_solver.h  simulation_properties.cpp  simulation_properties.h
